--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -14,10 +14,7 @@
         gap: 18px;
         margin-bottom: 50px;
 
-            a {
-                width: 100%;
-                height: 100%;
-            }
+           
             .card {
                 width: 340px;
                 background-color: white;
@@ -25,7 +22,11 @@
                 padding-bottom: 10px;
                 position: relative;
                
-
+ a {            display: block;
+                width: 100%;
+                height: auto
+                ;
+            }
                 .card__image {
                     height: 200px;
                     width:100%;
@@ -110,6 +111,7 @@
             display: flex;
             flex-wrap: wrap;
             flex-direction: row;
+            gap:60px;
 
             .card {
                     width: 490px;
