--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body a {
   text-decoration: none;
 }
 body .title {
-  margin-left: 14%;
+  margin-left: 20px;
 }
 body .background {
   background-color: transparent; /* Fond transparent */
@@ -380,7 +380,7 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   position: relative;
 }
 .main-container .restaurant {
-  position: absolute;
+  position: relative;
   margin-top: -50px;
   display: flex;
   flex-direction: column;
@@ -438,22 +438,22 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" fill="rgba(147, 86, 220, 1)"/></svg>');
 }
 .main-container .restaurant .restaurant__menu .menu__entry,
-.main-container .restaurant .restaurant__menu .menu__flat,
-.main-container .restaurant .restaurant__menu .menu__dessert {
+.main-container .restaurant .menu__flat,
+.main-container .restaurant .menu__dessert {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__title,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__title,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__title {
+.main-container .restaurant .menu__flat .menu__title,
+.main-container .restaurant .menu__dessert .menu__title {
   font-size: 16px;
   color: rgb(0, 0, 0);
   position: relative; /* Position relative pour faciliter le positionnement de la sous-ligne */
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__title::before,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__title::before,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__title::before {
+.main-container .restaurant .menu__flat .menu__title::before,
+.main-container .restaurant .menu__dessert .menu__title::before {
   content: ""; /* Ajoute un contenu vide */
   position: absolute; /* Position absolue par rapport à l'élément parent */
   bottom: -5px; /* Distance de la sous-ligne par rapport au bas de l'élément li */
@@ -465,8 +465,8 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   background-color: rgb(153, 226, 208);
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__choice,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__choice {
+.main-container .restaurant .menu__flat .menu__choice,
+.main-container .restaurant .menu__dessert .menu__choice {
   background-color: white;
   border-radius: 15px;
   box-shadow: 0 4px 15px 0;
@@ -476,8 +476,8 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   overflow: hidden;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice .menu__choice--content,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__choice .menu__choice--content,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__choice .menu__choice--content {
+.main-container .restaurant .menu__flat .menu__choice .menu__choice--content,
+.main-container .restaurant .menu__dessert .menu__choice .menu__choice--content {
   flex: 1;
   margin: 10px;
   text-overflow: ellipsis;
@@ -486,8 +486,8 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   width: 200px;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice .price,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__choice .price,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__choice .price {
+.main-container .restaurant .menu__flat .menu__choice .price,
+.main-container .restaurant .menu__dessert .menu__choice .price {
   font-weight: 700;
   display: flex;
   align-items: flex-end;
@@ -496,8 +496,8 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   cursor: pointer;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice .checkbox,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__choice .checkbox,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__choice .checkbox {
+.main-container .restaurant .menu__flat .menu__choice .checkbox,
+.main-container .restaurant .menu__dessert .menu__choice .checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -510,25 +510,21 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   cursor: pointer;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice .checkbox .fa-circle-check,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__choice .checkbox .fa-circle-check,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__choice .checkbox .fa-circle-check {
+.main-container .restaurant .menu__flat .menu__choice .checkbox .fa-circle-check,
+.main-container .restaurant .menu__dessert .menu__choice .checkbox .fa-circle-check {
   color: white;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice:hover .checkbox,
-.main-container .restaurant .restaurant__menu .menu__flat .menu__choice:hover .checkbox,
-.main-container .restaurant .restaurant__menu .menu__dessert .menu__choice:hover .checkbox {
+.main-container .restaurant .menu__flat .menu__choice:hover .checkbox,
+.main-container .restaurant .menu__dessert .menu__choice:hover .checkbox {
   margin-right: 0;
 }
-.main-container .restaurant .restaurant__menu .menu__entry .order,
-.main-container .restaurant .restaurant__menu .menu__flat .order,
-.main-container .restaurant .restaurant__menu .menu__dessert .order {
+.main-container .restaurant .order {
   display: flex;
   justify-content: center;
   margin: 30px;
 }
-.main-container .restaurant .restaurant__menu .menu__entry .order .order__button,
-.main-container .restaurant .restaurant__menu .menu__flat .order .order__button,
-.main-container .restaurant .restaurant__menu .menu__dessert .order .order__button {
+.main-container .restaurant .order .order__button {
   display: flex;
   flex-direction: row;
   justify-content: center;
