--- a/sass/_restaurants.scss
+++ b/sass/_restaurants.scss
@@ -36,23 +36,19 @@
     border-radius: 40px 40px 0px 0px;
     padding: 20px;
     width: 100%;
-
-  
-   /* @media only screen and (min-width: 1024px) {
-      margin-left: 383px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }*/
+     @media only screen and (min-width: 1024px) {
+        width: 80%;
+        margin-left: 10%;
+     }
 
     .restaurants__description {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-     /* @media only screen and (min-width: 1024px) {
-        gap: 20px;
-      }*/
+      @media only screen and (min-width: 1024px) {
+        justify-content: center;
+        gap: 25px;
+      }
       .restaurants__description--title {
         font-family: "shrikhand";
         font-style: italic;
