--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,13 @@ html { /* Utilisation de box-sizing: inherit pour hériter du modèle de boîte 
 }
 
 body {
-  margin: auto;
   font-family: "Roboto", serif;
   /*********************************************************/
   /****search*****/
   /*****functionality***/
 }
 body .main-container {
+  margin: auto;
   max-width: 1440px;
 }
 body a {
@@ -31,7 +31,14 @@ body .title {
 }
 @media only screen and (min-width: 1024px) {
   body .title {
-    margin-left: 6%;
+    margin-left: unset;
+    width: 1030px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  body .title1 {
+    margin-left: 206px;
+    /* width: calc(322px + 20px + 322px + 20px + 322px);*/
   }
 }
 body .background {
@@ -268,13 +275,15 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   padding-top: 35px;
   background-color: rgb(246, 246, 246);
   margin-top: 40px;
+  align-items: center;
+  justify-content: center;
 }
 .restaurants .restaurant__cards {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 18px;
+  gap: 50px;
   margin-bottom: 50px;
 }
 .restaurants .restaurant__cards .card {
@@ -406,6 +415,13 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
     margin-left: 10%;
   }
 }
+@media only screen and (min-width: 1024px) {
+  .main-container .restaurant .restaurant__menu {
+    max-width: 625px;
+    margin-left: 240px;
+    margin-right: 200px;
+  }
+}
 .main-container .restaurant .restaurants__description {
   display: flex;
   flex-direction: row;
@@ -479,6 +495,11 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice,
 .main-container .restaurant .menu__flat .menu__choice,
 .main-container .restaurant .menu__dessert .menu__choice {
+  animation-duration: 3s;
+  animation-delay: 0s;
+  animation-name: glissement;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
   background-color: white;
   border-radius: 15px;
   box-shadow: 0 4px 15px 0;
@@ -487,15 +508,32 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   flex-direction: row;
   overflow: hidden;
 }
+@keyframes glissement {
+  from {
+    margin-top: 100%;
+    height: 300%;
+  }
+  to {
+    margin-top: 0%;
+    height: 100%;
+  }
+}
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice .menu__choice--content,
 .main-container .restaurant .menu__flat .menu__choice .menu__choice--content,
 .main-container .restaurant .menu__dessert .menu__choice .menu__choice--content {
   flex: 1;
   margin: 10px;
+  width: 216px;
+}
+.main-container .restaurant .restaurant__menu .menu__entry .menu__choice .menu__choice--content .menu__choice--title,
+.main-container .restaurant .restaurant__menu .menu__entry .menu__choice .menu__choice--content .menu__choice--description,
+.main-container .restaurant .menu__flat .menu__choice .menu__choice--content .menu__choice--title,
+.main-container .restaurant .menu__flat .menu__choice .menu__choice--content .menu__choice--description,
+.main-container .restaurant .menu__dessert .menu__choice .menu__choice--content .menu__choice--title,
+.main-container .restaurant .menu__dessert .menu__choice .menu__choice--content .menu__choice--description {
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
-  width: 200px;
 }
 .main-container .restaurant .restaurant__menu .menu__entry .menu__choice .price,
 .main-container .restaurant .menu__flat .menu__choice .price,
