--- a/sass/_restaurants.scss
+++ b/sass/_restaurants.scss
@@ -1,4 +1,3 @@
-
 .button-retour {
   position: absolute; /* Position fixe pour rester en haut de la page */
   top: 20px; /* Distance du haut de la page */
@@ -15,14 +14,13 @@
 }
 
 .restaurant__image {
-    .palette {
-      object-fit: cover;
-      object-position: center;
-      width: 100%;
-      height: 275px;
-    }
+  .palette {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 275px;
   }
-
+}
 
 .main-container {
   position: relative;
@@ -36,11 +34,19 @@
     border-radius: 40px 40px 0px 0px;
     padding: 20px;
     width: 100%;
-     @media only screen and (min-width: 1024px) {
-        width: 80%;
-        margin-left: 10%;
-     }
+    @media only screen and (min-width: 1024px) {
+      width: 80%;
+      margin-left: 10%;
+    }
 
+    @media only screen and (min-width: 1024px) {
+
+    .restaurant__menu {
+      max-width: 625px;
+      margin-left: 240px;
+      margin-right: 200px;;
+    }
+  }
     .restaurants__description {
       display: flex;
       flex-direction: row;
@@ -84,111 +90,129 @@
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" fill="rgba(147, 86, 220, 1)"/></svg>');
       }
     }
-    .restaurant__menu 
-      .menu__entry,
-      .menu__flat,
-      .menu__dessert {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
+    .restaurant__menu .menu__entry,
+    .menu__flat,
+    .menu__dessert {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
 
-        .menu__title {
-          font-size: 16px;
-          color: rgb(0, 0, 0, 1);
-          position: relative; /* Position relative pour faciliter le positionnement de la sous-ligne */
-        }
+      .menu__title {
+        font-size: 16px;
+        color: rgb(0, 0, 0, 1);
+        position: relative; /* Position relative pour faciliter le positionnement de la sous-ligne */
+      }
 
-        .menu__title::before {
-          content: ""; /* Ajoute un contenu vide */
-          position: absolute; /* Position absolue par rapport à l'élément parent */
-          bottom: -5px; /* Distance de la sous-ligne par rapport au bas de l'élément li */
-          left: 0; /* Alignement de la sous-ligne sur la gauche */
-          right: 0;
-          height: 3px; /* Épaisseur de la sous-ligne */
-          background-color: rgba(242, 242, 242, 1);
-          width: 40px;
-          background-color: rgba(153, 226, 208, 1);
-        }
+      .menu__title::before {
+        content: ""; /* Ajoute un contenu vide */
+        position: absolute; /* Position absolue par rapport à l'élément parent */
+        bottom: -5px; /* Distance de la sous-ligne par rapport au bas de l'élément li */
+        left: 0; /* Alignement de la sous-ligne sur la gauche */
+        right: 0;
+        height: 3px; /* Épaisseur de la sous-ligne */
+        background-color: rgba(242, 242, 242, 1);
+        width: 40px;
+        background-color: rgba(153, 226, 208, 1);
+      }
 
-        .menu__choice {
-          background-color: white;
-          border-radius: 15px;
-          box-shadow: 0 4px 15px 0;
-          width: 100%;
-          display: flex;
-          flex-direction: row;
-          overflow: hidden;
-           .menu__choice--content {
-              flex: 1;
-              margin: 10px;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-              overflow: hidden;
-              width: 200px;
+      .menu__choice {
+        animation-duration: 3s;
+        animation-delay: 0s;
+        animation-name: glissement;
+        animation-iteration-count: 1; // S'assurer que l'animation ne se joue qu'une seule fois
+        animation-fill-mode: forwards; // Garder l'état final de l'animation
+        @keyframes glissement {
+          from {
+            margin-top: 100%;
+            height: 300%;
+          }
 
-            }
-
-            .price {
-              font-weight: 700;
-              display: flex;
-              align-items: flex-end;
-              justify-content: flex-end;
-              margin: 10px;
-              cursor: pointer;
-            }
-            
-            
-            .checkbox {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              width: 59px;
-              height: 69px;
-              background-color: rgb(153, 226, 208);
-              border-radius: 0 15px 15px 0;
-              transition-duration: 0.5s;
-              margin-right: -3.7rem;
-              cursor: pointer;
-              .fa-circle-check {
-                color: white;
-              }
-            }
-            &:hover .checkbox {
-              margin-right: 0;
-            }
-        }  
-        }
-          
-          .order {
-            display: flex;
-            justify-content: center;
-            margin: 30px;
-            .order__button {
-              display: flex;
-              flex-direction: row;
-              justify-content: center;
-              align-items: center;
-              width: 186px;
-              height: 50px;
-              color: white;
-              background-image: linear-gradient(
-                to left,
-                rgb(147, 86, 220),
-                rgb(255, 121, 218)
-              );
-              border-radius: 20px;
-              transition: background-color 0.5s;
-              font-size: 16px;
-            }
-            .order__button:hover {
-              filter: brightness(1.1); /* Éclaircir le bouton */
-              transform: scale(1); /* Optionnel: agrandir légèrement le bouton pour un effet plus dynamique */
-            }
+          to {
+            margin-top: 0%;
+            height: 100%;
           }
         }
-      
-  
-  
+
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: 0 4px 15px 0;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        overflow: hidden;
+        .menu__choice--content {
+          flex: 1;
+          margin: 10px;
+            width: 216px;
+          .menu__choice--title,
+          .menu__choice--description {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+        }
+
+        .price {
+          font-weight: 700;
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-end;
+          margin: 10px;
+          cursor: pointer;
+        }
+
+        .checkbox {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 59px;
+          height: 69px;
+          background-color: rgb(153, 226, 208);
+          border-radius: 0 15px 15px 0;
+          transition-duration: 0.5s;
+          margin-right: -3.7rem;
+          cursor: pointer;
+          .fa-circle-check {
+            color: white;
+          }
+        }
+        &:hover .checkbox {
+          margin-right: 0;
+        }
+       
+      }
+    }
+
+    .order {
+      display: flex;
+      justify-content: center;
+      margin: 30px;
+      .order__button {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 186px;
+        height: 50px;
+        color: white;
+        background-image: linear-gradient(
+          to left,
+          rgb(147, 86, 220),
+          rgb(255, 121, 218)
+        );
+        border-radius: 20px;
+        transition: background-color 0.5s;
+        font-size: 16px;
+      }
+      .order__button:hover {
+        filter: brightness(1.1); /* Éclaircir le bouton */
+        transform: scale(
+          1
+        ); /* Optionnel: agrandir légèrement le bouton pour un effet plus dynamique */
+      }
+    }
+  }
+
   .footer {
     position: absolute;
     width: 100%;
