--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,20 +1,16 @@
 //Mixins
 @mixin cards-shadow {
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Ombre avec un léger flou */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Ombre avec un léger flou */
 }
 
-@mixin flex-center-row{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+@mixin flex-center-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-@mixin flex-center-columun {
-    display: flex;
-    flex-direction: column;
-   
+@mixin flex-columun {
+  display: flex;
+  flex-direction: column;
 }
-   
-
-
