--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,6 @@
 
        .header {
-            @include flex-center-columun;
+            @include flex-columun;
             justify-content: center;
             align-items: center;
             gap:35px;
