--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -10,7 +10,7 @@
     align-items: center;
 }
 
-@mixin flex-center-columun {
+@mixin flex-columun {
     display: flex;
     flex-direction: column;
    
