--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -95,7 +95,7 @@ body {
           
         
         .search__bar {
-            @include flex-center-columun;
+            @include flex-columun;
             flex-wrap: wrap;
             padding-bottom: 35px;
             gap: 35px;
@@ -129,7 +129,7 @@ body {
                     }
                 
             .search__introduction {
-               @include flex-center-columun;
+               @include flex-columun;
                 justify-content: center;
                 align-items: center;
                 justify-content: center;
@@ -138,7 +138,7 @@ body {
                     .search__title {
                         margin-left: 20px;
                         margin-right: 20px;
-                        @include flex-center-columun;
+                        @include flex-columun;
                         align-items: center;
                         justify-content: center;
                         text-align: center;
@@ -176,12 +176,12 @@ body {
             
         /*****functionality***/
         .functionality {
-            @include flex-center-columun;
+            @include flex-columun;
             gap: 35px;
             margin-top: 20px;
 
                 .functionality__links {
-                    @include flex-center-columun;
+                    @include flex-columun;
                     justify-content: center;
                     align-items: center;
                     gap:20px;
